# mcp-dispatch

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  config.example.toml  dispatch_common.py  dispatch_fs.py  git_bridge.py  git_transport.py  gitsync_service.py  install.py  notify_policy.py  pyproject.toml  server.py
.github/workflows/: ci.yml
docs/: git-transport.md
hooks/: _dispatch_common.py  dispatch-arm.py  dispatch-gitsync-arm.py  dispatch-peek.py
scripts/: loopback-smoke.py  setup-cross-host.sh
tests/: conftest.py  test_arm.py  test_baseline.py  test_channels.py  test_cleanup.py  test_dispatch_common.py  test_git_bridge.py  test_git_hybrid.py  test_git_transport.py  test_gitsync_arm.py  test_gitsync_service.py  test_group_mode.py  test_inherit_inbox.py  test_liveness.py  test_notify.py  test_notify_policy.py  test_review_fixes.py  test_security.py  test_tail.py  test_wait.py
tui/: Makefile  go.mod  main.go  model.go  relay.go  relay_test.go  view.go  view_test.go
